Add pycache to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,44 @@
+# Локальное окружение
+/config/secrets.py
 .venv/
 /venv/
 .env/
 /env/
-.idea
-**/__pycache__
+.env
+
+
+# IDE
+.idea/
+.vscode/
+__pycache__/
+*.pyc
+
+
+# Системные
+.DS_Store
+Thumbs.db
+
+
+# Прочее
+*.exe
+
+
+# Автогенерируемые файлы
+/reports/
+/screenshots/
+/allure-results/
+*.log
+*.orig
+*.rar
+*.7z
+*.zip
+*.tar
+*.gz
+*.old
+*.tmp
+*.tags
+*.tags_sorted_by_file
+*.metadata
+*.lock
+*.swp
+*.out
